# tfg-data

./: .gitattributes  .gitignore  README.md
neuron-circuits/pico-neuron/: README.md  README2.md  main.py  pyproject.toml
neuron-circuits/pico-neuron/hr/: hindmarsh-rose.csv
neuron-circuits/pico-neuron/hr-chaotic/: hindmarsh-rose-chaotic.csv
neuron-circuits/pico-neuron/scripts/: plot_model.py
neuron-circuits/rtxi/: .gitignore  README.md  pyproject.toml
neuron-circuits/rtxi/scripts/: generate_all.bash  h5_to_parquet.py  plot_model.py  plot_parquet_directory.py
neuron-circuits/rtxi/v_hr-e_hr/: syn_antiphase.h5  syn_phase.h5
neuron-circuits/rtxi/v_hr-e_hr-daq_forwarding/: syn_antiphase.h5  syn_phase.h5
neuron-circuits/rtxi/v_hr-r_lp/: LP-example-100000.asc  syn_antiphase.h5  syn_phase.h5
performance-tests/cyclictest/: README.md  pyproject.toml
performance-tests/rt-benchmarks/: README.md  pyproject.toml
performance-tests/rt-benchmarks/priority-80/: no-workload.h5  workload.h5
performance-tests/rt-benchmarks/priority-85/: no-workload.h5  workload.h5
performance-tests/rt-benchmarks/priority-90/: no-workload.h5  workload.h5
performance-tests/rt-benchmarks/priority-95/: no-workload.h5  workload.h5
performance-tests/rt-benchmarks/priority-99/: no-workload.h5  workload.h5
performance-tests/rt-benchmarks/rtxi-stress/: workload.h5
performance-tests/rt-benchmarks/rtxi-stress-isolated/: workload.h5
performance-tests/rt-benchmarks/scripts/: merge-data.py  plot-data.py  read-and-plot-rtxi-stress.py  stress-command.bash
(+41 files in other folders)
