[project]
name = "rt-benchmarks"
version = "0.1.0"
description = "This project contains all the required python modules to ploot the data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2024.11.0",
    "h5py>=3.13.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
